<resources>
    <string name="app_name">ToDoApp</string>
    <string name="country1">Uganda</string>
    <string name="Jog">Jogging</string>
    <string name="date">2023-08-24</string>
    <string name="description">I went to the market.\nI bought a lot of glossaries including;\nonions which were my favourite.
    </string>
    <string name="complete">Mark as complete</string>
    <string name="float_button_name">Add Todo</string>
    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="save_name">SAVE</string>
    <string name="todo_name">To do name</string>
    <string name="todo_description">To do Description</string>
    <string name="todo_date">To do Date</string>
    <string name="add_button">Create Item</string>
</resources>